--- a/Intermediate CSS/01-Links.html
+++ b/Intermediate CSS/01-Links.html
@@ -13,6 +13,9 @@
             text-decoration-color: blue;
             text-decoration-style: dotted;
             text-decoration-thickness: 5px;
+            /*text-decoration: <text-decoration-line> || <text-decoration-color> 
+            || <text-decoration-style> || <text-decoration-thickness>;   Shorthand*/
+
         }
         /*a link the user has visited*/
         a:visited{
