08- CSS Position(fixed).html

--- a/Intermediate CSS/08- CSS Position(fixed).html
+++ b/Intermediate CSS/08- CSS Position(fixed).html
@@ -15,6 +15,9 @@
     </style>
 </head>
 <body>
+    <!---- Position: fixed; ------->
+    <!---The element is positioned relative to the browser window, always in the same place even when scrolling.
+    It's removed from the normal document flow, so it doesn't affect other elements.--->
     <div class="fixed-box">
         Fixed Position
     </div>
